# eatfit24

./: .editorconfig  .env.example  .gitignore  BROWSER_DEBUG_MODE.md  BUILD_AND_TEST_REPORT.md  CLAUDE.md  CLEANUP_INSTRUCTIONS.txt  DEBUG_MODE_TEST_CHECKLIST.md  MIGRATION_UV.md  README.md  UV_MIGRATION_CHECKLIST.md  ai-incident-trace.md  compose.dev.yml  compose.prod.yml.DEPRECATED  compose.yml  compose.yml.prod  docker-compose.dev.yml  docker-compose.yml  full_results.txt  project-rules.md  roadmap.md  roadmapbd.md  test_error_contract.py  test_invalid_image.py  test_results.txt  test_throttle.py  tmpclaude-f072-cwd
backend/: .env.example  .gitignore  Dockerfile  entrypoint.sh  gunicorn_config.py  nginx-host.conf  pyproject.toml  requirements.txt  test_ai_proxy_integration.py  test_ai_proxy_timeout.py  test_multipart_migration.py  test_trainer_auth.py  tmpclaude-869f-cwd  verify_p4_deployment.sh
backend/apps/: __init__.py
backend/apps/ai/: error_contract.py  serializers.py  tasks.py  views.py
backend/apps/ai_proxy/: adapter.py  client.py  service.py
backend/apps/billing/: TARIFF_MANAGEMENT.md  admin.py  models.py  notifications.py  serializers.py  services.py  tasks.py  tasks_digest.py  tasks_recurring.py  test_limits.py  test_webhook_json_parsing.py  tests.py  urls.py  usage.py  views.py  webhooks.py  yookassa_client.py
backend/apps/common/: image_utils.py  logging.py  storage.py  tests.py  views.py
backend/apps/core/: exception_handler.py
backend/apps/nutrition/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/telegram/: admin.py  apps.py  models.py  serializers.py  telegram_auth.py  tests.py  trainer_urls.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  services.py  throttles.py  urls.py  validators.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  local.py  production.py
backend/docs/: AI_ERROR_CONTRACT.md  AUDIT.md  AUDIT_COMPLEX.md  AUDIT_DEAD_CODE.md  AUDIT_INTEGRATION.md  AUDIT_INVARIANTS.md  AUDIT_RISK_REGISTER.md  BACKEND_INTEGRATION_SPEC.md  BACKEND_STRUCTURE.md  CLEANUP_CHANGELOG.md  ENV_CONTRACT.md  SERVER_AUDIT_BACKEND_CURL.md
bot/: .env.example  (+5 more)
(+397 files in other folders)
